# scrabs

./: .all-contributorsrc  .env.example  .graphqlconfig  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
assets/graphql/queries/: repository.gql
assets/graphql/schemas/: github.json
src/: client.rs  commands.rs  common.rs  lib.rs  main.rs
src/commands/: github.rs  meta.rs  music.rs
src/commands/github/: gh.rs  repo_view.rs  repository.rs
src/commands/meta/: ping.rs
src/commands/music/: deafen.rs  join.rs  leave.rs  mute.rs  play.rs  undeafen.rs  unmute.rs
src/common/: framework.rs  handler.rs  store.rs
