[package]
name = "scrabs"
version = "0.1.0"
authors = ["Rodrigo Sanabria <rodrigosanabria22@gmail.com>"]
edition = "2018"

[profile.dev]
incremental = true

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
reqwest = "0.10"
serde = "1.0"
graphql_client = "0.9"
dotenv = "0.15"

[dependencies.serenity]
default-features = false
features = [
    "cache",
    "voice",
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version ="0.8"